# trustification

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  Containerfile.bombastic-api  Containerfile.bombastic-indexer  Containerfile.docs  Containerfile.tests  Containerfile.ui  DEVELOPING.md  NEWSERVICE.md  README.md  RELEASE.md  TODO.md  VSCODE.md  collectorist.yaml  compose-trustification.yaml  compose.yaml  rust-toolchain.toml  rustfmt.nightly.toml
.cargo/: config.toml
.github/: matrix-users.yaml  prune-nightly.sh
.tekton/: backend-pull-request.yaml  backend-push.yaml  bombastic-api-pull-request.yaml  bombastic-api-push.yaml  bombastic-indexer-pull-request.yaml  bombastic-indexer-push.yaml  bommer-trustification-pull-request.yaml  bommer-trustification-push.yaml  devfile-sample-pull-request.yaml  devfile-sample-push.yaml  frontend-trustification-pull-request.yaml  frontend-trustification-push.yaml  integration-test-pipeline.yaml  test-pull-request.yaml  test-push.yaml  trust-backend-pull-request.yaml  trust-backend-push.yaml  trust-pull-request.yaml  trust-push.yaml  trustification-13z-test-pull-request.yaml  trustification-13z-test-push.yaml  trustification-backend-pull-request.yaml  trustification-backend-push.yaml  (+39 more)
admin/: Cargo.toml
admin/src/: delete.rs  lib.rs  reindex.rs  upload.rs
analytics/: Cargo.toml
analytics/src/: config.rs  lib.rs  segment.rs  tracker.rs
api/: Cargo.toml
api/src/: lib.rs  main.rs  sbom.rs  search.rs  server.rs
api/src/search/: mod.rs  result.rs
auth/: Cargo.toml
auth/examples/: generate_auth_schema.rs
auth/schema/: auth.json
auth/src/: actix.rs  auth.rs  claims.rs  config.rs  devmode.rs  lib.rs  swagger_ui.rs  user.rs
auth/src/authenticator/: actix.rs  claims.rs  config.rs  default.rs  error.rs  mod.rs  user.rs  validate.rs
auth/src/authorizer/: mod.rs
auth/src/client/: error.rs  inject.rs  mod.rs
auth/src/client/provider/: access_token.rs  bearer_token.rs  mod.rs  openid.rs
bombastic/api/: Cargo.toml  bombastic.yaml
bombastic/api/src/: lib.rs  main.rs  sbom.rs  server.rs  vex.rs
bombastic/bombastic/: Cargo.toml
bombastic/bombastic/src/: lib.rs  main.rs
bombastic/index/: Cargo.toml  testdata.sql
bombastic/index/src/: lib.rs  search.rs
bombastic/index/src/sbom/: mod.rs
bombastic/indexer/: Cargo.toml
bombastic/indexer/src/: indexer.rs  lib.rs  main.rs
bombastic/model/: Cargo.toml
bombastic/model/src/: data.rs  lib.rs  search.rs
bombastic/walker/: Cargo.toml  Containerfile  README.md  setup_gpg_key.sh  walker.sh
bombastic/walker/src/: bombastic.rs  changes.rs  lib.rs  processing.rs  report.rs  scanner.rs  shell_wrap.rs  walker.rs
bommer/: Cargo.toml  README.md
bommer/bommer-api/: Cargo.toml
bommer/bommer-api/src/: data.rs
bommer/bommer-ui/: Cargo.toml  Trunk.toml  package-lock.json
bommer/bommer-ui/dev/: trunk-hook.sh
bommer/bommer-ui/dev/endpoints/: backend.json
bommer/bommer-ui/src/: app.rs  console.rs  utils.rs
bommer/bommer-ui/src/components/: mod.rs  workload.rs
bommer/bommer-ui/src/pages/: workload.rs
bommer/docs/: image_id.md
bommer/spog/: Cargo.toml  index.html  package.json
bommer/spog/dev/endpoints/: README.md
bommer/spog/src/: about.rs  app.rs  console.rs  hooks.rs
bommer/spog/src/backend/: mod.rs  pkg.rs
bommer/spog/src/components/: backend.rs  mod.rs  workload.rs
bommer/spog/src/pages/: index.rs  mod.rs  workload.rs
bommer/spog/styles/: main.scss
bommer/src/: main.rs  pubsub.rs  workload.rs
bommer/src/bombastic/: client.rs  mod.rs
bommer/src/server/: mod.rs  ws.rs
bommer/src/store/: mod.rs  pods.rs
collector/client/: Cargo.toml
collector/client/src/: lib.rs
collector/collector/: Cargo.toml
collector/collector/src/: lib.rs
collector/common/: Cargo.toml
collector/common/src/: lib.rs
collector/nvd/: Cargo.toml
collector/nvd/src/: lib.rs  server.rs
collector/nvd/src/client/: cvss2.rs  cvss30.rs  cvss31.rs  mod.rs  schema.rs
collector/osv/: Cargo.toml
collector/osv/src/: lib.rs  server.rs
collector/osv/src/client/: mod.rs  schema.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs  reqwest.rs  tls.rs
common/src/config/: csv.rs
common/walker/: Cargo.toml
common/walker/src/: report.rs
common/walker/templates/: report.html
e2e-tests/: Cargo.toml  README.md
e2e-tests/src/: main.rs  world.rs
e2e-tests/src/pages/: home_page.rs  login.rs  mod.rs  search_catalog.rs
e2e-tests/src/scripts/: env.sh
e2e-tests/tests/features/: test.feature  trustification_home.feature
event-bus/: Cargo.toml  README.md
event-bus/src/: kafka.rs  lib.rs  sqs.rs
exporter/: Cargo.toml  README.md
exporter/src/: exporter.rs  lib.rs
index/: Cargo.toml  schema.sql
index/src/: lib.rs  metadata.rs  s3.rs  s3dir.rs  sort.rs
index/src/tokenizer/: and_then.rs  chain.rs  mod.rs
indexer/: Cargo.toml
indexer/src/: actix.rs  indexer.rs  lib.rs  main.rs  sbom.rs
infrastructure/: Cargo.toml
infrastructure/src/: app.rs  defaults.rs  endpoint.rs  infra.rs  lib.rs  tracing.rs
infrastructure/src/app/: http.rs  mod.rs
infrastructure/src/health/: checks.rs  mod.rs
infrastructure/src/health/checks/: bool.rs  failure.rs  mod.rs  probe.rs  sync.rs  uninit.rs
infrastructure/src/tls/client/: mod.rs
infrastructure/src/tls/server/: mod.rs
integration-tests/: Cargo.toml  Containerfile  README.md  run-test-binaries.sh
integration-tests/config/: auth.yaml
integration-tests/src/: bom.rs  config.rs  lib.rs  provider.rs  runner.rs  spog.rs  ui.rs  vex.rs
integration-tests/tests/: bombastic.rs  spog.rs  ui.rs  vexination.rs
integration-tests/tests/crda/: test1.sbom.json
integration-tests/tests/testdata/correlation/: rhsa-2023_1529.json  stf-1.5.json
integration-tests/tests/testdata/crda/: wrong-version.json
storage/: Cargo.toml
storage/src/: key.rs  lib.rs  stream.rs  validator.rs
trust/: Cargo.toml  Containerfile
trust/src/: all.rs  main.rs
version/: Cargo.toml
version/src/: build.rs  lib.rs  version.rs
xtask/: Cargo.toml
xtask/src/: common.rs  config.rs  errors.rs  main.rs
xtask/src/task/: test.rs
(+936 files in other folders)
