[workspace]
resolver = "2"
members = [
    "admin",
    "analytics",
    "api",
    "auth",
    "bombastic/api",
    "bombastic/bombastic",
    "bombastic/index",
    "bombastic/indexer",
    "bombastic/model",
    "bombastic/walker",
    "collector/client",
    "collector/collector",
    "collector/osv",
    "collector/snyk",
    "collectorist/api",
    "collectorist/client",
    "collectorist/collectorist",
    "common",
    "common/walker",
    "event-bus",
    "exhort/api",
    "exhort/exhort",
    "exhort/model",
    "exporter",
    "index",
    "indexer",
    "infrastructure",
    "integration-tests",
    "reservoir/api",
    "reservoir/reservoir",
    "spog/api",
    "spog/model",
    "spog/spog",
    "storage",
    "trust",
    "v11y/api",
    "v11y/client",
    "v11y/index",
    "v11y/indexer",
    "v11y/model",
    "v11y/v11y",
    "v11y/walker",
    "version",
    "vexination/api",
    "vexination/index",
    "vexination/indexer",
    "vexination/model",
    "vexination/vexination",
    "vexination/walker",
    "xtask",
]
default-members = [
    "analytics",
    "auth",
    "bombastic/api",
    "bombastic/bombastic",
    "bombastic/index",
    "bombastic/indexer",
    "bombastic/model",
    "collector/client",
    "collector/collector",
    "collector/osv",
    "collector/snyk",
    "collectorist/api",
    "collectorist/client",
    "collectorist/collectorist",
    "common",
    "common/walker",
    "event-bus",
    "exhort/api",
    "exhort/exhort",
    "exhort/model",
    "exporter",
    "index",
    "indexer",
    "infrastructure",
    "reservoir/api",
    "reservoir/reservoir",
    "spog/api",
    "spog/model",
    "spog/spog",
    "storage",
    "trust",
    "v11y/api",
    "v11y/client",
    "v11y/index",
    "v11y/indexer",
    "v11y/model",
    "v11y/v11y",
    "v11y/walker",
    "version",
    "vexination/api",
    "vexination/index",
    "vexination/indexer",
    "vexination/model",
    "vexination/vexination",
    "vexination/walker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[workspace.dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-files = "0.6.2"
actix-http = "3.3.1"
actix-rt = "2"
actix-tls = "3"
actix-web = "4"
actix-web-extras = "0.1"
actix-web-httpauth = "0.8"
actix-web-opentelemetry = "0.15"
actix-web-prom = "0.8.0"
actix-ws = "*"
anyhow = "1"
async-compression = "0.4"
async-stream = "0.3"
async-trait = "0.1"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-sqs = "1"
base64 = "0.21"
biscuit = "0.6"
bytes = "1"
bytesize = "1"
bzip2 = "0.4"
chrono = { version = "0.4.26", default-features = false }
clap = "4"
colored_json = "4"
cpe = "0.1.3"
crc32fast = "1.3.2"
csaf = { version = "0.5", default-features = false }
csaf-walker = { version = "=0.6.0-rc.1", default-features = false }
cve = "0.3.1"
cvss = "2"
cyclonedx-bom = "0.4.0"
derive_more = "0.99"
enumset = "1.1.3"
env_logger = "0.11"
futures = "0.3"
futures-util = "0.3"
globset = "0.4.13"
guac = "0.3.1"
hide = "0.1.3"
http = "0.2.9"
humantime = "2"
humantime-serde = "1.1.1"
jsonpath-rust = "0.4"
jsonwebtokens = "1.2.0"
lazy_static = "1.4"
lenient_semver = "0.4.2"
log = "0.4"
native-tls = "0.2"
ntest = "0.9"
openid = "0.12"
openssl = "*"
opentelemetry = "0.20"
opentelemetry-jaeger = "0.19"
packageurl = "0.4"
parking_lot = "0.12"
pem = "3"
prometheus = "0.13.3"
rand = "0.8"
rdkafka = "0.36"
regex = "1.9"
reqwest = { version = "0.11.16", default-features = false }
rust-s3 = { git = "https://github.com/trustification/rust-s3.git", branch = "trustification", features = ["blocking"] }
sbom-walker = { version = "=0.6.0-rc.1", default-features = false }
schemars = "0.8"
segment = "0.2"
semver = "1.0.20"
sequoia-openpgp = { version = "*", default-features = false }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10.5"
sha2 = "0.10.7"
sha256 = "1.4.0"
sikula = { version = "0.4.1", default-features = false }
spdx-expression = "0.5"
spdx-rs = "0.5.5"
sqlx = "0.7.0"
strum = "0.26"
strum_macros = "0.26"
tantivy = "0.21.0"
tar = "0.4"
tempfile = "3"
tera = "1.19.1"
test-context = "0.1"
test-with = "0.12"
thirtyfour = "0.32.0-rc.8"
thiserror = "1"
time = "0.3.21"
tokio = "1.0"
tokio-util = "0.7"
tracing = "0.1"
tracing-bunyan-formatter = "0.3.7"
tracing-opentelemetry = "0.20"
tracing-subscriber = { version = "0.3.17", default-features = false }
url = "2"
url-escape = "0.1.1"
urlencoding = "2"
utoipa = "4"
utoipa-swagger-ui = "6"
uuid = "1"
vergen = "8"
walkdir = "2"
walker-common = "=0.6.0-rc.1"
walker-extras = "=0.6.0-rc.1"
which = "6.0.0"
xshell = "0.2"
zstd = "0.13"
zstd-sys = "=2.0.9"


bombastic = { path = "bombastic/bombastic" }
bombastic-api = { path = "bombastic/api" }
bombastic-index = { path = "bombastic/index" }
bombastic-indexer = { path = "bombastic/indexer" }
bombastic-model = { path = "bombastic/model" }
bombastic-walker = { path = "bombastic/walker" }
collector = { path = "collector/collector" }
collector-client = { path = "collector/client" }
collector-osv = {path = "collector/osv"}
collector-snyk = { path = "collector/snyk" }
collectorist = { path = "collectorist/collectorist" }
collectorist-api = { path = "collectorist/api" }
collectorist-client = { path = "collectorist/client" }
exhort = { path = "exhort/exhort" }
exhort-api = { path = "exhort/api" }
exhort-model = { path = "exhort/model" }
exporter = { path = "exporter" }
spog = { path = "spog/spog" }
spog-api = { path = "spog/api" }
spog-model = { path = "spog/model" }
trustification-admin = { path = "admin" }
trustification-analytics = { path = "analytics" }
trustification-api = { path = "api" }
trustification-auth = { path = "auth", default-features = false, features = ["actix", "swagger"] }
trustification-common = { path = "common" }
trustification-common-walker = { path = "common/walker" }
trustification-event-bus = { path = "event-bus" }
trustification-index = { path = "index" }
trustification-indexer = { path = "indexer" }
trustification-infrastructure = { path = "infrastructure" }
trustification-storage = { path = "storage" }
trustification-version = { path = "version", features = ["actix-web"] }
v11y = { path = "v11y/v11y" }
v11y-api = { path = "v11y/api" }
v11y-client = { path = "v11y/client"}
v11y-index = { path = "v11y/index" }
v11y-indexer = { path = "v11y/indexer" }
v11y-model = { path = "v11y/model" }
v11y-walker = { path = "v11y/walker" }
vexination = { path = "vexination/vexination" }
vexination-api = { path = "vexination/api" }
vexination-index = { path = "vexination/index" }
vexination-indexer = { path = "vexination/indexer" }
vexination-model = { path = "vexination/model" }
vexination-walker = { path = "vexination/walker" }

#guac = { path = "../guac-rs/lib" }

[patch.crates-io]
#tantivy = { path = "../tantivy" }
#sikula = { git = "https://github.com/ctron/sikula", rev = "023c27232f016b80a34c8ed77b88d1c30dcae6e0" }
#sikula = { path = "../sikula" }

# csaf-walker = { path = "../csaf-walker/csaf" }
# walker-common = { path = "../csaf-walker/common" }
#cpe = { git = "https://github.com/trustification/cpe-rs", rev = "dc2c5661d436410cc9562596ab16a2e771261eb2" }
csaf = { git = "https://github.com/ctron/csaf-rs", rev = "183326beac525d58962f78be8eca973017702753" } # FIXME: waiting for release #16 #28

# also check: spog/ui/Cargo.toml
# TODO Switch to the official repository once https://github.com/CycloneDX/cyclonedx-rust-cargo/issues/615 is fixed
cyclonedx-bom = { git = "https://github.com/carlosthe19916/cyclonedx-rust-cargo", branch = "issue-615-trustification" }
#spdx-rs = { git = "https://github.com/trustification/spdx-rs", rev = "c65be086e898dae88609f07bbc5a224ba4e0838d" } # FIXME: awaiting doubleopen-project/spdx-rs#/27

#cve = { git = "https://github.com/ctron/cve", rev = "77341768d893098f1f8b1397364fecfb16b4d776" } # FIXME: awaiting release
#hide = { git = "https://github.com/ctron/hide", rev = "109059cce66fd85dbe40f59ad40b7dab47b70fe1" } # FIXME: awaiting release

# Do not generate debuginfo for dependencies in `dev` and `test` profiles. This
# save us some disk space
[profile.dev.package."*"]
debug = false
