[package]
name = "trustification-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
env_logger = "0.11"

reqwest = { version = "0.11.16", features = ["json", "stream"] }
regex = "1.9.5"

url = { version = "2.3.1", features = ["serde"] }
trustification-auth = { path = "../auth" }
trustification-common = { path = "../common" }
trustification-infrastructure = { path = "../infrastructure" }
bombastic-model = { path = "../bombastic/model" }
vexination-model = { path = "../vexination/model" }
