[package]
name = "trustification-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored_json = "4"
env_logger = "0.11"
log = "0.4"
regex = "1.9.5"
reqwest = { version = "0.11.16", features = ["json", "stream"] }
serde_json = "1"
url = { version = "2.3.1", features = ["serde"] }

trustification-auth = { path = "../auth" }
trustification-common = { path = "../common" }
trustification-infrastructure = { path = "../infrastructure" }
bombastic-model = { path = "../bombastic/model" }
vexination-model = { path = "../vexination/model" }
