[package]
name = "trustification-admin"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored_json = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde_json = { workspace = true }
url = { workspace = true, features = ["serde"] }

trustification-auth = { workspace = true }
trustification-common = { workspace = true }
trustification-infrastructure = { workspace = true }
bombastic-model = { workspace = true }
vexination-model = { workspace = true }
