[package]
name = "trustification-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
humantime = "2"
log = "0.4"
segment = { version = "0.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1" }
uuid = { version = "1", features = ["v4"] }
