[package]
name = "bombastic-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["tokio", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bombastic-index = { path = "../index" }
bombastic-storage = { path = "../storage" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
zstd = "0.12"
