[package]
name = "trustification-api"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Common API definitions"

[dependencies]
reqwest = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
utoipa = { workspace = true }