[package]
name = "trustification-auth"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Authentication and authorization functionality"

[dependencies]
async-trait = "0.1"
anyhow = "1"
biscuit = "0.6"
chrono = { version = "0.4.26", default-features = false }
clap = { version = "4", features = ["derive", "env"]}
futures-util = "0.3"
humantime = "2"
log = "0.4"
openid = "0.12"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
thiserror = "1"
tracing = "0.1"
url = "2"
base64 = "0.21"

trustification-common = { path = "../common" }

actix-web = { version = "4.3.1", optional = true }
actix-http = { version = "3.3.1", optional = true }
actix-web-httpauth = { version = "0.8", optional = true }
actix-web-extras = { version = "0.1", optional = true }

[features]
default = []
actix = ["actix-web", "actix-http", "actix-web-httpauth", "actix-web-extras"]

