[package]
name = "trustification-auth"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Authentication and authorization functionality"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.21"
biscuit = "0.6"
chrono = { version = "0.4.26", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
humantime = "2"
log = "0.4"
openid = "0.12"
reqwest = "0.11"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = "1"
tracing = "0.1"
url = "2"

trustification-common = { path = "../common" }

actix-web = { version = "4.3.1", optional = true }
actix-http = { version = "3.3.1", optional = true }
actix-web-httpauth = { version = "0.8", optional = true }
actix-web-extras = { version = "0.1", optional = true }

utoipa = { version = "3", features = ["actix_extras"], optional = true }
utoipa-swagger-ui = { version = "3", features = ["actix-web"], optional = true }

[features]
default = []
actix = ["actix-web", "actix-http", "actix-web-httpauth", "actix-web-extras"]
swagger = ["utoipa", "utoipa-swagger-ui", "actix"]
