[package]
name = "bommer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6"
actix-web = "4"
actix-ws = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
futures = { version = "0.3" }
env_logger = "0.10"
k8s-openapi = { version = "0.18.0", features = ["v1_23"] }
kube = { version = "0.82.2", features = ["runtime"] }
packageurl = "0.3.0"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
url = "2"
uuid = { version = "1", features = ["v4"] }

bommer-api = { path = "bommer-api" }

trustification-infrastructure = { path = "../infrastructure" }
