[package]
name = "trustification-common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Common tools"

[dependencies]
anyhow = "1"
log = "0.4"
reqwest = { version = "0.11", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
pem = "2"
native-tls = "0.2"