[package]
name = "trustification-common"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Common tools"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }

native-tls = { workspace = true, optional = true }
pem = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[features]
default = ["tls"]
tls = ["native-tls", "reqwest", "reqwest/native-tls", "pem"]