[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thirtyfour = "0.31.0"
tokio = "1.33.0"
clap = { version = "4", features = ["derive", "env"] }
cucumber = { version = "0.20", features = ["output-junit","output-json","libtest"] }
futures = "0.3.1"