[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thirtyfour = "0.32.0-rc.8"
tokio = "1.33.0"
clap = { version = "*", features = ["derive", "env"] }
cucumber = { version = "0.20", features = ["output-junit","output-json","libtest"] }
futures = "0.3.1"
selenium-manager = { git = "https://github.com/SeleniumHQ/selenium", branch = "trunk" }
