[package]
name = "trustification-event-bus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = "0.55.2"
aws-credential-types = "0.55.2"
aws-sdk-sqs = "0.27.0"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
hide ="0.1.1"
log = "0.4"
prometheus = "0.13.3"
rdkafka = { version = "0.31", features = ["cmake-build"] }
serde_json = "1"
thiserror = "1.0"