[package]
name = "trustification-event-bus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-sqs = "1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
hide ="0.1.1"
log = "0.4"
prometheus = "0.13.3"
rdkafka = { version = "0.36", features = ["cmake-build", "gssapi", "sasl", "ssl" ] }
serde_json = "1"
thiserror = "1.0"