[package]
name = "trustification-event-bus"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-sqs = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
futures = { workspace = true }
hide = { workspace = true }
log = { workspace = true }
prometheus = { workspace = true }
rdkafka = { workspace = true, features = ["cmake-build", "gssapi", "sasl", "ssl" ] }
serde_json = { workspace = true }
thiserror = { workspace = true }