[package]
name = "exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
hex = "0.4.3"
log = "0.4"
trustification-event-bus = { path = "../event-bus" }
trustification-infrastructure = { path = "../infrastructure" }
trustification-storage = { path = "../storage" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"
rand = "0.8"
guac = { git = "https://github.com/dejanb/guac-rs.git", branch = "main" }
strum = "0.24"
strum_macros = "0.24"
prometheus = "0.13.3"
