[package]
name = "exporter"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
guac = { workspace = true }
log = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["full"] }

trustification-event-bus = { workspace = true }
trustification-infrastructure = { workspace = true }
trustification-storage = { workspace = true }