[package]
name = "trustification-index"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
humantime = "2.1.0"
log = "0.4"
prometheus = "0.13.3"
rand = "0.8"
serde_json = "1.0.68"
sikula = { version = "0.4.0", features = ["time"] }
sha2 = "0.10.7"
tantivy = "0.21.0"
tar = "0.4"
time = "0.3"
zstd = "0.12"
rust-s3 = { git = "https://github.com/trustification/rust-s3.git", branch = "trustification", features = ["blocking"] }
crc32fast = "1.3.2"
async-trait = "0.1"
trustification-storage = { path = "../storage"}
thiserror = "1"
trustification-api = { path = "../api"}
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10"
