[package]
name = "trustification-index"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
bytesize = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
crc32fast = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
prometheus = { workspace = true }
rand =  { workspace = true }
rust-s3 = { workspace = true }
serde_json =  { workspace = true }
sha2 = { workspace = true }
sikula =  { workspace = true, features = ["time"] }
tantivy = { workspace = true, features = ["zstd-compression"] }
tar = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["sync"]  }
zstd = { workspace = true }
zstd-sys = { workspace = true }

trustification-storage = { workspace = true }
trustification-api = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
