[package]
name = "trustification-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
hex = "0.4.3"
log = "0.4"
thiserror = "1.0"
trustification-event-bus = { path = "../event-bus" }
trustification-infrastructure = { path = "../infrastructure" }
trustification-storage = { path = "../storage" }
trustification-index = { path = "../index" }
actix-web = "4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"
zstd = "0.12"
rand = "0.8"
prometheus = "0.13.3"
