[package]
name = "trustification-indexer"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

trustification-event-bus = { workspace = true }
trustification-infrastructure = { workspace = true }
trustification-storage = { workspace = true }
trustification-index = { workspace = true }