[package]
name = "trustification-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6"
actix-tls = {version = "3", features = ["openssl"]}
actix-web = { version = "4", features = ["openssl"] }
actix-web-extras = "0.1"
actix-web-httpauth = "0.8"
actix-web-opentelemetry = "0.13.0"
actix-web-prom = "0.7.0"
anyhow = "1"
bytesize = "1.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env", "string"] }
env_logger = "0.10"
futures = "0.3"
log = "0.4"
openssl = "*"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18.0", features = ["rt-tokio"] }
prometheus = "0.13.3"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = ["time", "signal"] }
tracing-bunyan-formatter = "0.3.7"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "tracing-log"] }
tracing-actix-web = "0.7.8"
url = "2.4.0"

trustification-auth = { path = "../auth", features = ["actix"] }
