[package]
name = "trustification-infrastructure"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
actix-cors = { workspace = true }
actix-tls = { workspace = true, features = ["openssl"] }
actix-web = { workspace = true, features = ["openssl"] }
actix-web-extras = { workspace = true }
actix-web-httpauth = { workspace = true }
actix-web-opentelemetry = { workspace = true }
actix-web-prom = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "string"] }
env_logger = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
log = { workspace = true }
openssl = { workspace = true }
opentelemetry = { workspace = true, features = ["rt-tokio"] }
opentelemetry-jaeger = { workspace = true, features = ["rt-tokio"] }
parking_lot = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time", "signal"] }
tracing-bunyan-formatter = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, default-features = false, features = ["env-filter", "tracing-log"] }
url = { workspace = true }

trustification-auth = { workspace = true, features = ["actix"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
