[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
env_logger = "0.10"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow = "1"
openid = "0.12"
chrono = { version = "0.4", default-features = false }
log = "0.4"
test-context = "0.1"
test-with = "0.10.2"
ntest = "0.9"
time = "0.3"
trustification-event-bus = { path = "../event-bus" }
trustification-auth = { path = "../auth", default-features = false, features = ["swagger"] }

bombastic-api = { path = "../bombastic/api" }
bombastic-indexer = { path = "../bombastic/indexer" }

vexination-api = { path = "../vexination/api" }
vexination-indexer = { path = "../vexination/indexer" }

spog-api = { path = "../spog/api" }
trustification-infrastructure = { path = "../infrastructure" }
trustification-storage = { path = "../storage" }
trustification-index = { path = "../index" }
trustification-indexer = { path = "../indexer" }

clap = { version = "4", features = ["derive"] }

prometheus = "0.13.3"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2.1.2"

thirtyfour = "0.32.0-rc.8"
actix-web = "4"
actix-files = "0.6.2"
tempfile = "3"
strum = { version = "0.25", features = ["derive"] }
bytesize = "1.3.0"

[dev-dependencies]
env_logger = "0.10"
spog-model = { path = "../spog/model" }

[features]
default = ["admin"]
admin = []
# UI tests
ui = []
